--- a/index.html
+++ b/index.html
@@ -7,20 +7,9 @@
     <meta name="author" content="Aleph Ramos - Desenvolvedor Web">
     <meta name="description" content="DESCRIÇÃO BREVE DA PÁGINA">
     <meta name="keywords" content="alephsramos, @alephsramos, aleph, alephramos">
+    <link rel="icon" href="assets/images/favicon.ico"> <!-- Ícone da página -->
 
-    <!-- LINKS DE REFERÊNCIA -->
-    <link rel="stylesheet" href="assets/css/main.css"> <!-- CSS principal da página -->
-    <link rel="stylesheet" href="assets/css/responsive.css"> <!-- CSS responsivo da página -->
-    <link rel="stylesheet" href="assets/css/variables.css"> <!-- CSS com variáveis da página -->
-    <link rel="icon" href="assets/images/favicon.ico"> <!-- Ícone da página (FALTA COLOCAR) -->
-
-    <!-- CÓDIGOS DO JAVASCRIPT -->
-    <script src="assets/js/main.js" defer></script> <!-- JS principal da página -->
-    <script src="assets/js/carousel.js" defer></script> <!-- JS para o carousel -->
-    <script src="assets/js/navigation.js" defer></script> <!-- JS para a navegação -->
-    <script src="assets/js/includes.js" defer></script> <!-- JS para carregar includes -->
-
-    <title>Nova Metálica</title> <!-- Título da página -->
+    <title>@alephsramos</title> <!-- Título da página -->
 </head>
 
 <body> <!-- Abertura do corpo todo da página -->
