--- a/index.html
+++ b/index.html
@@ -5,10 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./src/css/style.css">
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
     <title>Sidebar</title>
 </head>
 <body>
-    <nav id="sidebar">
+    <nav id="sidebar" class="animate__animated animate__bounceInLeft">
         <div id="sidebar_content">
             <div id="user">
                 <img src="./src/images/logo-alephsramos-solo.svg" id="user_avatar" alt="Avatar">
@@ -95,6 +99,7 @@
                         </span>
                     </a>
                 </li>
+
             </ul>
     
             <button id="open_btn">
