--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <a href="#">
                         <i class="fa-regular fa-star"></i>
                         <span class="item-description">
-                            Projetos
+                            Sobre mim
                         </span>
                     </a>
                 </li>
@@ -41,7 +41,7 @@
                     <a href="#">
                         <i class="fa-solid fa-display"></i>
                         <span class="item-description">
-                            Serviços
+                           Projetos
                         </span>
                     </a>
                 </li>
@@ -50,7 +50,7 @@
                     <a href="#">
                         <i class="fa-solid fa-code"></i>
                         <span class="item-description">
-                            Conhecimentos
+                            Serviços
                         </span>
                     </a>
                 </li>
