--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./src/css/style.css">
+    <link rel="stylesheet" href="src/css/sobre-mim.css">
     <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
@@ -118,7 +119,65 @@
     </nav>
 
     <main>
+        <div class="elementos-sobre-mim">
+            <div class="sobre-linguagens">
+                <i class="fa-brands fa-html5 animate__animated animate__backInLeft"></i>
+                <i class="fa-brands fa-css3-alt animate__animated animate__backInRight"></i>
+                <i class="fa-brands fa-js animate__animated animate__jackInTheBox"></i>
+                <i class="fa-brands fa-python animate__animated animate__backInLeft"></i>
+                <i class="fa-brands fa-react animate__animated animate__backInRight"></i>
+            </div>
+            <div class="sobre-nome">
+                <p id="meu_nome">
+                    Olá, eu sou um &lt;b&gt; <b>desenvolvedor web</b> &lt;/b&gt freelancer
+                </p>
+            </div>
+            <div class="sobre-habilidade">
+                <h1 class="animate__animated animate__flipInY">Desenvolvedor</h1>
+                <h1 class="animate__animated animate__flipInX">& Designer</h1>
+
+            </div>
+            <div class="sobre-local">
+                <div class="local-1">
+                <p class="animate__animated animate__bounceInLeft">Miguel Pereira, RJ - Brasil</p>
+            </div><div class="local-2">
+                <h6 class="animate__animated animate__fadeInRight">Designer</h6>
+                <h6 class="animate__animated animate__fadeInRight">Social Media</h6>
+                <h6 class="animate__animated animate__fadeInRight">Desenvolvedor Web</h6>
+                <h6 class="animate__animated animate__fadeInRight">WebDesign</h6>
+            </div></div>
+            <div class="sobre-buttons">
+                <button class="sobre-button-1 animate__animated animate__zoomIn">Criar meu design</button>
+                <button class="sobre-button-2 animate__animated animate__zoomIn">Criar meu website</button>
+                <button class="sobre-button-3 animate__animated animate__zoomIn">Começar do zero</button>
+            </div>
+            <div class="sobre-sociais">
+                <a href="#" class="texto animate__animated animate__bounceInRight">
+                    @alephsramos | Todos os direitos reservados
+                </a>
+            
+                <div class="icones">
+                    <a href="#">
+                        <i class="fa-brands fa-square-instagram animate__animated animate__zoomIn"></i>
+                    </a>
+                    <a href="#">
+                        <i class="fa-brands fa-linkedin animate__animated animate__zoomIn"></i>
+                    </a>
+                    <a href="#">
+                        <i class="fa-brands fa-square-whatsapp animate__animated animate__zoomIn"></i>
+                    </a>
+                    <a href="#">
+                        <i class="fa-solid fa-square-envelope animate__animated animate__zoomIn"></i>
+                    </a>
+                    <a href="#">
+                        <i class="fa-brands fa-square-github animate__animated animate__zoomIn"></i>
+                    </a>
+                </div>
+            </div>
+        </div>
     </main>
+
+
     <script src="src/javascript/script.js"></script>
 </body>
 </html>
